# attention-schema-theory-experiment

./: .gitignore  AUTHORS.txt  CITATION.cff  DOCUMENTATION.md  Makefile  PROMPT.md  README.md  cloud.sh  install.py  pyproject.toml
.github/workflows/: black.yaml  flake8.yaml  tests.yaml
aintelope/: __main__.py  aintelope_typing.py  experiment.py  experiments.py  gridsearch.py  gridsearch_orchestrator.py  gridsearch_pipeline.py  nonpipeline.py  orchestrator.py  pipeline.py
aintelope/agents/: __init__.py  a2c_agent.py  abstract_agent.py  ddpg_agent.py  dqn_agent.py  dummy_agent.py  example_agent.py  handwritten_rules_agent.py  instinct_agent.py  llm_agent.py  llm_utilities.py  main_agent.py  mainagent.py  ppo_agent.py  q_agent.py  random_agent.py  sac_agent.py  sb3_agent.py  sb3_base_agent.py  sb3_handwritten_rules_expert.py  sb3_instincts.py  scripts.py  shard_agent.py  simple_agents.py  td3_agent.py
aintelope/analytics/: analytics.py  boxplot.py  diagnostics.py  gridsearch_analytics.py  merge_gridsearch_result_files.py  metrics.py  plot_library.py  plot_primitives.py  plot_results.ipynb  plots.py  plotting.py  recalculate_gridsearch_sfella_scores.py  recording.py  remove_trials_from_results.py  statistical_significance.py
aintelope/config/: __init__.py  animation_config.yaml  config_baseline_experiment.yaml  config_experiment.yaml  config_experiment_ddpg.yaml  config_experiment_dqn.yaml  config_experiment_exampleagent.yaml  config_experiment_handwritten_rules.yaml  config_experiment_llm_agent.yaml  config_experiment_mixed.yaml  config_experiment_ppo.yaml  config_experiment_random.yaml  config_experiment_reward.yaml  config_experiment_sac.yaml  config_experiment_score.yaml  config_experiment_score_a2c.yaml  config_experiment_score_a2c_cnn2.yaml  config_experiment_score_a2c_cnn3.yaml  config_experiment_score_a2c_mlp.yaml  config_experiment_score_dqn.yaml  config_experiment_score_dqn_cnn2.yaml  config_experiment_score_dqn_cnn3.yaml  config_experiment_score_dqn_mlp.yaml  config_experiment_score_ppo.yaml  config_experiment_score_ppo_cnn2.yaml  config_experiment_td3.yaml  (+21 more)
requirements/: aintelope.txt  api.txt
tests/: __init__.py  __main__.py  conftest.py  test_agent_integration.py  test_config.py  test_determinism.py  test_dummy.py  test_gui.py  test_integration.py  test_learning.py  test_models.py  test_roi.py  test_sb3_agents.py
(+96 files in other folders)
