[project]
name = "aintelope"
version = "0.1"
description = "See README."
readme = "README.md"
license = "MPL-2.0"
license-files = [
  "LICENSE.txt",
  "AUTHORS.md",
  "CITATION.cff"
]
maintainers = [
  {name = "Joel Pyykkö", email = "joel@aintelope.net"}
]
authors = [
  {name = "Joel Pyykkö", email = "joel@aintelope.net"},
  {name = "Roland Pihlakas", email = "roland@simplify.ee"},  
  {name = "Andre Kochanke", email = "a.kochanke@posteo.net"},
  {name = "Gunnar Zarncke", email = "gunnar@zarncke.de"},
  {name = "Nathan Helm-Burger", email = "nathan.helm.burger@gmail.com"},
  {name = "Hauke Rehfeld", email = "git@haukerehfeld.de"},
  {name = "Orpheus Lummis", email = "o@orpheuslummis.info"}
]
requires-python = ">=3.10.3,<3.11"
dependencies = [
  "diskcache==5.6.3",
  "filelock==3.13.1",
  "flatten-dict==0.4.2",
  "gymnasium==0.29.1",
  "httpx==0.27.2",
  "json-tricks==3.17.1",
  "matplotlib==3.7.0",
  "numpy==1.26.4",
  "omegaconf==2.3.0",
  "openai==1.55.3",
  "pandas==1.5.3",
  "PettingZoo==1.24.1",
  "posix-ipc==1.1.1; platform_system != 'Windows'",
  "progressbar2==4.2.0",
  "psutil==5.9.4",
  "pygame==2.4",
  "scipy==1.15.0",
  "seaborn==0.12.2",
  "semaphore-win-ctypes==0.1.2; platform_system == 'Windows'",
  "tensorboard==2.18.0",
  "torch==2.1.0",
  "stable-baselines3==2.3.2",
  "supersuit==3.9.3",
  "tenacity==8.2.2",
  "tiktoken==0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "mypy>=1.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0"
]

[project.scripts]
aintelope-gui = "aintelope.__main__:gui_main"
aintelope-results = "aintelope.__main__:results_main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aintelope", "tests"]

[tool.black]
line-length = 88
force-exclude = '''
/(
ai_safety_gridworlds
| gymnasium
| outputs
| pettingzoo
| pycolab
| stable_baselines3
| supersuit
| zoo_to_gym_multiagent_adapter
| \.vshistory
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = "E121,E123,E126,E226,E24,E704,W503,W504,E203,E501,F401,W291,E266,F403,F405,F841,E265,F811"
exclude = "ai_safety_gridworlds"

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true
